--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 
 <body>
     <section>
+        <!-- menu start...left div......... -->
         <div id="menu">
             <h1>Heart Ace</h1>
+            <!-- start list..... -->
             <ul>
                 <li>
                     <svg fill="#414141" height="26px" width="26px" version="1.1" id="Layer_1"
@@ -48,6 +50,7 @@
                     </ul>
                 </li>
             </ul>
+            <!-- list end????????? -->
             <svg xmlns="http://www.w3.org/2000/svg" fill="#414141" width="64px" height="64px"
                 viewBox="-10.8 -10.8 45.60 45.60" stroke="#414141" stroke-width="0.792">
                 <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
@@ -65,6 +68,10 @@
             </svg>
 
         </div>
+        <!-- menu end....... -->
+
+
+        <!-- notesBox start right div..... -->
         <div id="notesBox">
             <div class="searchBox">
                 <svg width="50" height="16" viewBox="0 0 10 11" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -248,7 +255,6 @@
                         </svg>
                     
                 </div> -->
-
                 <!-- <div>
                     <div>
                         <hi>title name</hi>
@@ -276,6 +282,7 @@
                 </div> -->
             </div>
         </div>
+        <!-- notesBox end.......... -->
     </section>
 
 </body>
