--- a/index.html
+++ b/index.html
@@ -49,9 +49,28 @@
                         </li>
                     </ul>
                 </li>
+                <li>
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="#414141" width="64px" height="64px"
+                        viewBox="-10.8 -10.8 45.60 45.60" stroke="#414141" stroke-width="0.792">
+                        <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                        <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                        <g id="SVGRepo_iconCarrier">
+                            <path
+                                d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z">
+                            </path>
+                        </g>
+                    </svg>
+                </li>
+                <li>
+                    <svg width="22" height="27" viewBox="0 0 22 27" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M2 24C2 25.65 3.35 27 5 27H17C18.65 27 20 25.65 20 24V6H2V24ZM21.5 1.5H16.25L14.75 0H7.25L5.75 1.5H0.5V4.5H21.5V1.5Z"
+                            fill="#414141" />
+                    </svg>
+                </li>
             </ul>
             <!-- list end????????? -->
-            <svg xmlns="http://www.w3.org/2000/svg" fill="#414141" width="64px" height="64px"
+            <!-- <svg xmlns="http://www.w3.org/2000/svg" fill="#414141" width="64px" height="64px"
                 viewBox="-10.8 -10.8 45.60 45.60" stroke="#414141" stroke-width="0.792">
                 <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
                 <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
@@ -60,12 +79,12 @@
                         d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z">
                     </path>
                 </g>
-            </svg>
-            <svg width="22" height="27" viewBox="0 0 22 27" fill="none" xmlns="http://www.w3.org/2000/svg">
+            </svg> -->
+            <!-- <svg width="22" height="27" viewBox="0 0 22 27" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                     d="M2 24C2 25.65 3.35 27 5 27H17C18.65 27 20 25.65 20 24V6H2V24ZM21.5 1.5H16.25L14.75 0H7.25L5.75 1.5H0.5V4.5H21.5V1.5Z"
                     fill="#414141" />
-            </svg>
+            </svg> -->
 
         </div>
         <!-- menu end....... -->
@@ -73,14 +92,47 @@
 
         <!-- notesBox start right div..... -->
         <div id="notesBox">
-            <div class="searchBox">
+            <div id="noteHeader">
+                <div class="searchBox">
+                    <svg width="50" height="16" viewBox="0 0 10 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M7.33255 6.93444H6.86916L6.70492 6.77616C7.40881 5.95544 7.77248 4.83573 7.57305 3.64569C7.29736 2.01596 5.9365 0.714531 4.29409 0.515213C1.81288 0.210373 -0.275323 2.29735 0.0296957 4.77711C0.229131 6.41856 1.53133 7.77861 3.162 8.05414C4.35275 8.25346 5.47311 7.89 6.29431 7.18652L6.45269 7.35067V7.81379L8.94563 10.3053C9.18613 10.5456 9.57913 10.5456 9.81963 10.3053C10.0601 10.0649 10.0601 9.67214 9.81963 9.43178L7.33255 6.93444ZM3.8131 6.93444C2.35253 6.93444 1.17352 5.75612 1.17352 4.2964C1.17352 2.83669 2.35253 1.65836 3.8131 1.65836C5.27367 1.65836 6.45269 2.83669 6.45269 4.2964C6.45269 5.75612 5.27367 6.93444 3.8131 6.93444Z"
+                            fill="#D2D2D2" />
+                    </svg>
+                    <input type="search" name="" id="" placeholder="search..">
+                </div>
+                <svg height="71px" width="71px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 504 504" xml:space="preserve"
+                    fill="#000000">
+                    <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                    <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                    <g id="SVGRepo_iconCarrier">
+                        <circle style="fill:#414141;" cx="252" cy="252" r="252"></circle>
+                        <path style="fill:#FFFFFF;"
+                            d="M354.8,409.6H149.2c-10,0-18-8-18-18V112.4c0-10,8-18,18-18h205.6c10,0,18,8,18,18v279.2 C372.8,401.6,364.8,409.6,354.8,409.6z">
+                        </path>
+                        <g>
+                            <path style="fill:#2B3B4E;"
+                                d="M184,154.8l-4.4-10.4h-20.4l-4.4,10.4h-11.6l20.8-48.4h10.4l20.8,48.4H184z M169.2,120.8l-6,14h12 L169.2,120.8z">
+                            </path>
+                            <path style="fill:#2B3B4E;"
+                                d="M320,349.2l4.4,10.4h20.4l4.4-10.4h11.6L340,397.6h-10.4l-20.8-48.4H320z M334.8,383.2l6-14h-12 L334.8,383.2z">
+                            </path>
+                        </g>
+                        <path style="fill:#F1543F;"
+                            d="M252,207.2c13.6-17.2,32.8-21.2,46.4-16c33.2,12.8,41.2,61.6,12.4,92C252,346.4,252,346.4,252,346.4 s0,0-59.2-63.2c-28.8-30.8-20.8-79.2,12.4-92C219.2,186,238.4,189.6,252,207.2z">
+                        </path>
+                    </g>
+                </svg>
+            </div>
+            <!-- <div class="searchBox">
                 <svg width="50" height="16" viewBox="0 0 10 11" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
                         d="M7.33255 6.93444H6.86916L6.70492 6.77616C7.40881 5.95544 7.77248 4.83573 7.57305 3.64569C7.29736 2.01596 5.9365 0.714531 4.29409 0.515213C1.81288 0.210373 -0.275323 2.29735 0.0296957 4.77711C0.229131 6.41856 1.53133 7.77861 3.162 8.05414C4.35275 8.25346 5.47311 7.89 6.29431 7.18652L6.45269 7.35067V7.81379L8.94563 10.3053C9.18613 10.5456 9.57913 10.5456 9.81963 10.3053C10.0601 10.0649 10.0601 9.67214 9.81963 9.43178L7.33255 6.93444ZM3.8131 6.93444C2.35253 6.93444 1.17352 5.75612 1.17352 4.2964C1.17352 2.83669 2.35253 1.65836 3.8131 1.65836C5.27367 1.65836 6.45269 2.83669 6.45269 4.2964C6.45269 5.75612 5.27367 6.93444 3.8131 6.93444Z"
                         fill="#D2D2D2" />
                 </svg>
                 <input type="search" name="" id="" placeholder="search..">
-            </div>
+            </div> -->
             <h1>notes</h1>
             <div id="notes">
                 <div>
@@ -90,7 +142,7 @@
                             here...vvvtype here...type here...type here...type here...type here...type here...type
                             here...type here...type here...type here...type here...type here...type here...type
                             here...type here...type here...type here...</p>
-                            
+
                     </div>
                     <nav>
                         <ul>
@@ -98,10 +150,10 @@
                                 <b>B</b>
                             </li>
                             <li>
-                               <b><u>U</u></b> 
+                                <b><u>U</u></b>
                             </li>
                             <li>
-                               <b><i>I</i></b> 
+                                <b><i>I</i></b>
                             </li>
                         </ul>
                     </nav>
@@ -126,10 +178,10 @@
 
                 </div>
                 <div>
-                    <div>
-                        <hi>title name</hi>
-                        <p>type here...type here...type here...type here...type here...type here...type here...</p>
-                    </div>
+
+                    <h3>title name</h3>
+                    <textarea name="" id="textarea" cols="21" rows="7" placeholder="type here..."></textarea>
+
 
                     <svg width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
