--- a/noteBook1/noteBook.html
+++ b/noteBook1/noteBook.html
@@ -14,14 +14,13 @@
     <main>
         <div id="left">
             <header>
-                <div>
-                    <img src="Images/plus.png" alt="">
-                    <img src="#" alt="">
-                    <img src="#" alt="">
+                <div class="leftHeader">
+                    <img src="Images/add-svgrepo-com.svg" alt="">
+                    <!-- <img src="#" alt="">
+                    <img src="#" alt=""> -->
                 </div>
-                <div>
-                    <img src="Images/reject.png" alt="">
-
+                <div class="rightHeader">
+                    <img src="Images/line-multiply-svgrepo-com.svg" alt="">
                 </div>
             </header>
             <h1> Sticky Notes</h1>
@@ -30,53 +29,57 @@
                 <img src="Images/search.png" alt="">
             </div>
             <div class="savedNote">
-                <div>
-                    <!-- <input type="text" placeholder=""> -->
-                    <!-- <textarea name="" class="text1" cols="60" rows="1"></textarea> -->
+                <div class="savedNote1">
+                    <h2>..Title..</h2>
+                    <h4>....note....</h4>
                 </div>
-                <div>
-                    <!-- <input type="text" placeholder=""> -->
-                    <!-- <textarea name="" class="text1" cols="60" rows="1"></textarea> -->
+                <div class="savedNote2">
+                    <h2>..Title..</h2>
+                    <h4>....note....</h4>
                 </div>
             </div>
         </div>
         <div id="right">
             <div class="firstNote">
                 <div class="firstNoteHeader">
-                    <div>
-                        <img src="#" alt="">
-                        <img src="#" alt="">
+                    <div class="leftHeader">
+                        <img src="Images/add-svgrepo-com.svg" alt="">
+                    </div>
+                    <div class="rightHeader">
+                        <img src="Images/line-multiply-svgrepo-com.svg" alt="">
                     </div>
                 </div>
                 <div class="firstNoteMain">
-                    <h1>header</h1>
-                    <p>asfdasdada</p>
+                    <h1>..Title..</h1>
+                    <p>......note......</p>
                 </div>
                 <div class="firstNoteFooter">
+                    <!-- <img src="" alt="">
                     <img src="" alt="">
                     <img src="" alt="">
                     <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
+                    <img src="" alt=""> -->
                 </div>
             </div>
             <div class="secondNote">
                 <div class="secondNoteHeader">
-                    <div>
-                        <img src="#" alt="">
-                        <img src="#" alt="">
+                    <div class="leftHeader">
+                        <img src="Images/add-svgrepo-com.svg" alt="">
+                    </div>
+                    <div class="rightHeader">
+                        <img src="Images/line-multiply-svgrepo-com.svg" alt="">
                     </div>
                 </div>
                 <div class="secondNoteMain">
-                    <h1>secondNote</h1>
-                    <p>adasfbfgs</p>
+                    <h1>..Title..</h1>
+                    <p>......note......</p>
                 </div>
                 <div class="secondNoteFooter">
+                    <!-- <img src="" alt="">
                     <img src="" alt="">
                     <img src="" alt="">
                     <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
+                    <img src="" alt=""> -->
                 </div>
             </div>
         </div>
