--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
 
                     <ul>
                         <li>
-                            <div id="yellow" onClick="yellow()
+                            <div id="yellow" onClick="newNote(yellowBox)
                             "></div>
                         </li>
                         <li>
-                            <div id="blue" onClick="blue()"></div>
+                            <div id="blue" onClick="newNote(blueBox)"></div>
                         </li>
                         <li>
-                            <div id="red" onClick="red()"></div>
+                            <div id="red" onClick="newNote(redBox)"></div>
                         </li>
                         <li>
-                            <div id="orange" onClick="orange()"></div>
+                            <div id="orange" onClick="newNote(orangeBox)"></div>
                         </li>
                     </ul>
                 </li>
@@ -128,7 +128,7 @@
             <div id="notes">
                 <div>
 
-                   <input type="text" placeholder="title name">
+                    <input type="text" placeholder="title name">
                     <textarea name="" placeholder="type here..."></textarea>
 
 
@@ -153,34 +153,12 @@
                             fill="#C9D940" />
                     </svg>
 
-                
-                           
+
+
 
                 </div>
                 <div>
 
-                    <input type="text" placeholder="title name">
-                    <textarea name="" placeholder="type here..."></textarea>
-
-
-                    <svg width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                            d="M19 6.90152L12.1695 6.31415L9.5 0.042572L6.8305 6.32363L0 6.90152L5.187 11.3826L3.629 18.0426L9.5 14.5089L15.371 18.0426L13.8225 11.3826L19 6.90152ZM9.5 12.7373L5.928 14.8878L6.878 10.8331L3.724 8.10468L7.885 7.74468L9.5 3.92678L11.1245 7.75415L15.2855 8.11415L12.1315 10.8426L13.0815 14.8973L9.5 12.7373Z"
-                            fill="#C9D940" />
-                    </svg>
-                    </svg>
-                    <svg class="pencil" fill="#414141" viewBox="-2.4 -2.4 28.80 28.80"
-                        xmlns="http://www.w3.org/2000/svg">
-                        <g id="SVGRepo_bgCarrier" stroke-width="0" transform="translate(4.92,4.92), scale(0.59)">
-                            <rect x="-2.4" y="-2.4" width="28.80" height="28.80" rx="14.4" fill="#ECECEC"
-                                strokewidth="0"></rect>
-                        </g>
-                        <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" stroke="#CCCCCC"
-                            stroke-width="0.048"></g>
-                        <g id="SVGRepo_iconCarrier">
-                            <path d="M12,2A10,10,0,1,0,22,12,10,10,0,0,0,12,2ZM10,16,7,17l1-3,7-7,2,2Z"></path>
-                        </g>
-                    </svg>
 
                 </div>
 
