--- a/sicky note/note.html
+++ b/sicky note/note.html
@@ -13,11 +13,15 @@
 <body>
     <div class="main-container">
         <div class="container1">
-            <button id="create-note">Create Note</button>
+            <button class="btn-12"><span>Add Note</span></button>
+
         </div>
-        <div class="container2"><ul id="noteList"></ul></div>
+        <div class="container2">
+            <ul id="noteList"></ul>
+        </div>
         <div class="container3">
             <form id="formNote">
+                <input type="text" placeholder="title..." class="noteTitle">
                 <textarea id="note-text" placeholder="Write Note ..." maxlenght="96"></textarea>
                 <svg id="check-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                     class="bi bi-check-circle" viewBox="0 0 16 16">
